# spunkybot

./: .editorconfig  .flake8  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  LICENSE  MANIFEST.in  Makefile  README.md  data.sqlite  debian-startscript  requirements.txt  rhel-startscript  setup.cfg  setup.py  spunky.py  systemd-spunkybot.service  update_geoip
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: ---documentation.md  ---feature-request.md  bug-report.md  bug_report.md  config.yml  feature-request.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  create-release.yml  greetings.yml  npmlint.yml  pypi-publish.yml  pytest.yml  pythonflake8.yml  pythonlint.yml  pythonsetup.yml  stale.yml
conf/: commands.conf  events.conf  rules.conf  settings.conf
debian/: README.Debian  changelog  conffiles  control  copyright  postinst  postrm  prerm  rules  spunkybot.init  spunkybot.service  watch
doc/: Commands.md  Spunky Bot Commands.md  commands.html  database schema.txt
lib/: MIT_LICENSE  MaxMind-ODL_LICENSE  heartbeat.py  pygeoip.py  pyquake3.py  rcon.py  rules.py  schedule.py
tests/: test_parser.py
tools/: combine_uaa-banlist_with_bot-banlist.sh  create_empty_database.py  db_cleanup_expired_entries.py  db_remove_expired_banpoints.py
