[metadata]
description-file = README.md
license-file = LICENSE
long_description_content_type = text/x-rst
project_urls =
    Mailing lists = https://docs.spunkybot.de/community/communicating.html#mailing-list-information
    Code of Conduct = https://docs.spunkybot.de/community/code-of-conduct.html
    Source Code = https://github.com/SpunkyBot/spunkybot
    Documentation = https://docs.spunkybot.de
    Bug Tracker = https://github.com/SpunkyBot/spunkybot/issues

[flake8]
# Ignored flake8 warnings:
# - E402: module level import not at top of file
# - E501: line too long
# - E722: do not use bare except
ignore = E402, E501, E722

[sdist]
formats = gztar

[bdist_wheel]
python-tag = py27

[options]
python_requires = >=2.6

[check-manifest]
ignore =
    .travis.yml
    .gitignore
    .gitattributes
    .editorconfig
    .flake8
    VERSION
    tests
    tests/*.py
    debian
    debian/*
